<?xml version="1.0"?>
<package format="2">

  <name>tiers_ros_msgs</name>
  <version>0.0.1</version>
  <description>The tiers_ros_msgs package</description>

  <!-- Author / maintainer -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <maintainer email="jopequ@utu.fi">Jorge Peña Queralta</maintainer>

  <!-- License -->
  <license>MIT</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Others -->
  <export>
  </export>

</package>
